--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/71c2b966f1.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -33,8 +37,12 @@
               clean, responsive layout with sections for projects, skills, and
               contact details.
             </p>
-            <button class="btn-cv" type="button">Download CV</button>
-            <button class="btn-cv" type="button">Contact</button>
+            <button class="btn-cv" type="button">
+              <i class="fa-solid fa-download"></i> Download CV
+            </button>
+            <button class="btn-call" type="button">
+              <i class="fa-solid fa-phone"></i> Contact
+            </button>
           </div>
           <img class="images" src="images/hardy.png" alt="" />
         </div>
@@ -82,7 +90,7 @@
         <div class="card">
           <img src="icons/js.png" alt="javascript picture not found" />
           <h4>Vanilla JavaScript</h4>
-          <p>
+          <p class="extra">
             List skill/technologies here. You can change the icon above to any
             of the 1500+ FontAwesome 5 free icons available. Aenean commodo
             ligula eget dolor.
@@ -91,7 +99,7 @@
         <div class="card">
           <img src="icons/react.png" alt="" />
           <h4>React</h4>
-          <p>
+          <p class="extra">
             List skill/technologies here. You can change the icon above to any
             of the 1500+ FontAwesome 5 free icons available. Aenean commodo
             ligula eget dolor.
@@ -100,7 +108,7 @@
         <div class="card">
           <img src="icons/nodejs.png" alt="" />
           <h4>Node.js</h4>
-          <p>
+          <p class="extra">
             List skill/technologies here. You can change the icon above to any
             of the 1500+ FontAwesome 5 free icons available. Aenean commodo
             ligula eget dolor.
@@ -109,7 +117,7 @@
         <div class="card">
           <img src="icons/mongo.png" alt="" />
           <h4>MongoDB</h4>
-          <p>
+          <p class="extra">
             List skill/technologies here. You can change the icon above to any
             of the 1500+ FontAwesome 5 free icons available. Aenean commodo
             ligula eget dolor.
@@ -184,14 +192,14 @@
         </div>
       </div>
       <div class="download-cv">
-        <img src="" alt="" />
-
-        <button class="btn-cv">Download CV</button>
+        <button class="btn-cv">
+          <i class="fa-solid fa-download"></i> Download CV
+        </button>
       </div>
       <div class="contact">
         <div class="portion">
           <h2 class="contact-space">Lets Connect</h2>
-          <p class="contact-space">
+          <p class="contact-space extra">
             Please fill out the form on this section to contact with me or call
             between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
           </p>
