edit submit button style

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             cols="40"
           ></textarea>
           <br />
-          <button class="btn-cv">submit</button>
+          <button class="btn-submit">Submit</button>
         </div>
       </div>
     </main>
